[package]
name = "async-grafbase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-opentelemetry = "0.17"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "json",
    "env-filter",
] }
aws-config = "0.47.0"
aws-sdk-dynamodb = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_derive = "1.0"
async-graphql = { version = "4", features = ["uuid", "chrono", "url"] }
async-graphql-poem = "4"
async-stream = "0.3"
poem = "1"
dotenv = "0.15"
uuid = { version = "1.1", features = ["serde", "v4"] }
thiserror = "1.0"
futures-timer = "3.0"
anyhow = "1.0"
